<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shoppier</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logo">logo</string>
    <string name="icon">icon</string>
    <string name="shoppier">Shoppier</string>
    <string name="login">Login</string>
    <string name="skip"><u>Skip Login</u></string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_list_select">ListSelect</string>
    <string name="title_activity_groc_list">GrocListActivity</string>
    <string name="item_name">Item name</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="namelabel">Name: </string>
    <string name="brandlabel">Brand: </string>
    <string name="storelabel">Store: </string>
    <string name="aislelabel">Aisle: </string>
    <string name="title_activity_single_searable_item_view">SingleSearableItemView</string>
    <string name="space"> : </string>
    <string name="add">Add</string>
    <string name="add_to_db">Add an item to the database</string>
    <string name="item_brand">Item brand</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="dismiss">Dismiss</string>
    <string name="list_name">List name</string>
    <string name ="title_barcode">Barcode Scanner</string>
    <string name="add_location">Location:</string>
    <string name="quanity">Qty:</string>
    <string name="title_EditItem">Edit Item</string>
    <string name="create_list">Create</string>

</resources>
