<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <ImageView
            android:id="@+id/mapView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/shoppier" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/add_item_Name"
            android:layout_alignRight="@+id/add_item_Name"
            android:layout_below="@+id/add_item_Name"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/login" />

            <EditText
                android:id="@+id/add_item_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/btnLogout"
                android:background="@drawable/blank"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </RelativeLayout>

        <EditText
            android:id="@+id/add_item_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/mapView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/blank"
            android:ems="10"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:clickable="true"
            android:text="@string/skip" />

        <ProgressBar
            android:id="@+id/progressBarMainScreen"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/add_item_Name"
            android:layout_alignLeft="@+id/add_item_Name"
            android:layout_alignRight="@+id/add_item_Name"
            android:indeterminate="true" />
               </RelativeLayout>

</ScrollView>